tests/globals/valid/fun_shadowed_by_variable.su
s32 foo() {
    return 3;
}

s32 main() {
    s32 foo = 5;
    return foo;
}