tests/globals/invalid/multiple_global_defs.su
s32 foo = 3;

s32 main() {
    return foo;
}

s32 foo = 0;